[package]
name = "tr"
version = "0.1.2"
authors = ["Olivier Goffart <ogoffart@woboq.com>"]
description = "tr! macro for localisation"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/woboq/tr"
documentation = "https://docs.rs/tr"
keywords = ["internationalization", "translation", "l10n", "i18n", "gettext"]
categories = ["internationalization", "localization"]

[features]
default = ["gettext-rs"]

[dependencies]
lazy_static = "1.2"
gettext-rs = { version = "0.4.1", optional = true }
gettext = { version = "0.3", optional = true }
