[package]
name = "tr"
version = "0.1.10"
authors = ["Olivier Goffart <ogoffart@woboq.com>"]
description = "tr! macro for localisation"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/woboq/tr"
documentation = "https://docs.rs/tr"
keywords = ["internationalization", "translation", "l10n", "i18n", "gettext"]
categories = ["internationalization", "localization"]
edition = "2018"

[features]
default = ["gettext-rs"]

[dependencies]
lazy_static = "1.2"
gettext-rs = { version = "0.7", optional = true, features = ["gettext-system"] }
gettext = { version = "0.4", optional = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "my_bench"
harness = false
