[package]
name = "tr"
version = "0.1.11"
authors = ["Olivier Goffart <ogoffart@woboq.com>"]
description = "tr! macro for localisation"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/woboq/tr"
documentation = "https://docs.rs/tr"
keywords = ["internationalization", "translation", "l10n", "i18n", "gettext"]
categories = ["internationalization", "localization"]
edition = "2021"
rust-version = "1.81"

[features]
default = ["gettext-rs"]
mo-translator = ["dep:rspolib"]
po-translator = ["dep:rspolib"]

[dependencies]
gettext-rs = { version = "0.7", optional = true, features = ["gettext-system"] }
gettext = { version = "0.4", optional = true }
rspolib = { version = "0.1.1", optional = true }

[dev-dependencies]
criterion = "0.6"

[[bench]]
name = "my_bench"
harness = false

[package.metadata.docs.rs]
features = ["mo-translator", "po-translator", "gettext-rs"]
