[package]
name = "xtr"
version = "0.0.0"
authors = ["Olivier Goffart <ogoffart@woboq.com>"]
description = "Extract strings from a rust crate to be translated with gettext"
license = "AGPL-3.0"

[dependencies]
proc-macro2 = "0.4.24"
# syn is used in crate_visitor.rs to parse a file and visit the `mod` location.
# It is also used in extract_message.rs to parse the literals into their string prepresentation
syn = { version = "0.15.20", features=["full", "visit", "extra-traits"] }
clap = "2.32"
tr = { path="../tr" }
failure = "0.1.3"
