[package]
name = "xtr"
version = "0.1.3"
authors = ["Olivier Goffart <ogoffart@woboq.com>"]
description = "Extract strings from a rust crate to be translated with gettext"
license = "AGPL-3.0"
readme = "../README.md"
repository = "https://github.com/woboq/tr"
documentation = "https://docs.rs/tr"
keywords = ["localization", "l10n", "i18n", "gettext", "xgettext"]
categories = ["internationalization", "localization"]
edition = "2018"


[dependencies]
proc-macro2 = { version = "1", features = ["span-locations"] }
# syn is used in crate_visitor.rs to parse a file and visit the `mod` location.
# It is also used in extract_message.rs to parse the literals into their string representation
syn = { version = "1", features=["full", "visit", "extra-traits"] }
clap = "2.32"
tr = { path="../tr", version = "0.1" }
failure = "0.1.3"
chrono = "0.4.6"
